<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFCFC"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/add_new_category"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E88E5" />

        <TextView
            android:id="@+id/textViewSubCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/add_new_subcategory"
            android:textSize="20sp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E88E5" />

        <TextView
            android:id="@+id/textViewBackupMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_backup"
            android:textSize="20sp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E88E5" />

        <TextView
            android:id="@+id/textViewExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_export"
            android:textSize="20sp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E88E5" />

        <TextView
            android:id="@+id/textViewImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_import"
            android:textSize="20sp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1E88E5" />

        <TextView
            android:id="@+id/textViewAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu_about"
            android:textSize="20sp"
            android:typeface="normal" />
    </LinearLayout>

</FrameLayout>