<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ExpenseChartFragment">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="fill"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMonthPrevious"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:textColor="@color/buttonTextColor"
                app:strokeColor="@color/buttonStrokeColor"
                android:textSize="14sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/monthPrevious" />

            <Button
                android:id="@+id/buttonDayPrevious"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:textColor="@color/buttonTextColor"
                app:strokeColor="@color/buttonStrokeColor"
                android:textSize="14sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/dayPrevious" />

            <Button
                android:id="@+id/buttonExpenseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/expenseDate" />

            <Button
                android:id="@+id/buttonDayNext"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:textColor="@color/buttonTextColor"
                app:strokeColor="@color/buttonStrokeColor"
                android:textSize="14sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/dayNext" />

            <Button
                android:id="@+id/buttonMonthNext"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:textColor="@color/buttonTextColor"
                app:strokeColor="@color/buttonStrokeColor"
                android:textSize="14sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/monthNext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMoneyStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#43A047"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewMoneySpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-1234"
                android:textColor="#AF0505"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewMoneyLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="+5000"
                android:textColor="#3949AB"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idTVHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="Pie Chart"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="413dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>